--- a/CorvallisRecycle/DataViewController.xib
+++ b/CorvallisRecycle/DataViewController.xib
@@ -124,6 +124,9 @@
                     <state key="normal" title="Button">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="callPhone:" destination="-1" eventType="touchUpInside" id="qyI-9d-9pD"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
