--- a/CorvallisRecycle/DataViewController.xib
+++ b/CorvallisRecycle/DataViewController.xib
@@ -6,12 +6,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DataViewController">
             <connections>
+                <outlet property="AddressField" destination="Zf4-Ru-Hyr" id="54Z-WS-Lp7"/>
                 <outlet property="AddressLabel" destination="LDf-MC-1E6" id="bCs-V7-1bJ"/>
                 <outlet property="NameData" destination="kNV-XJ-1uv" id="79J-by-vi1"/>
                 <outlet property="NameLabel" destination="Gvd-A3-8hj" id="W69-PH-y7G"/>
                 <outlet property="PhoneData" destination="D1G-j6-hak" id="EIA-qv-e3t"/>
                 <outlet property="PhoneLabel" destination="nrn-kL-Jqo" id="lm0-ft-G4m"/>
-                <outlet property="StreetData" destination="Qeo-P4-26w" id="KTo-KQ-2eu"/>
                 <outlet property="WSData" destination="uVV-zZ-KnW" id="Iyt-aN-3ud"/>
                 <outlet property="WebSiteLabel" destination="Hub-zq-3TR" id="uOb-gD-o31"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -23,7 +23,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gvd-A3-8hj">
-                    <rect key="frame" x="34" y="124" width="51" height="21"/>
+                    <rect key="frame" x="8" y="124" width="51" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -35,19 +35,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDf-MC-1E6">
-                    <rect key="frame" x="34" y="162" width="68" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qeo-P4-26w">
-                    <rect key="frame" x="117" y="157" width="442" height="32"/>
+                    <rect key="frame" x="8" y="162" width="68" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Phone:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nrn-kL-Jqo">
-                    <rect key="frame" x="34" y="289" width="54" height="21"/>
+                    <rect key="frame" x="8" y="289" width="54" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -59,13 +53,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Website:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hub-zq-3TR">
-                    <rect key="frame" x="34" y="349" width="67" height="21"/>
+                    <rect key="frame" x="8" y="348" width="67" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVV-zZ-KnW">
-                    <rect key="frame" x="118" y="348" width="308" height="21"/>
+                    <rect key="frame" x="83" y="348" width="308" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -82,8 +76,14 @@
                         <action selector="callPhone:" destination="-1" eventType="touchUpInside" id="qyI-9d-9pD"/>
                     </connections>
                 </button>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zf4-Ru-Hyr">
+                    <rect key="frame" x="134" y="162" width="240" height="128"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xqp-1I-o8s">
-                    <rect key="frame" x="109" y="339" width="344" height="40"/>
+                    <rect key="frame" x="92" y="323" width="344" height="40"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
